[gd_scene load_steps=5 format=3 uid="uid://b7vgx4gno2qux"]

[ext_resource type="Script" uid="uid://b4yvah0wsc1a7" path="res://scripts/power_up_manager.gd" id="1_vxdkk"]
[ext_resource type="Script" uid="uid://drghie8cwotu3" path="res://scripts/button.gd" id="2_0ocr6"]

[sub_resource type="GDScript" id="GDScript_coxm5"]
script/source = "extends HBoxContainer


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	var choix1 = randi_range(1, 3)
	if choix1 == 1:
		print(\"Explosion\")

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="SpriteFrames" id="SpriteFrames_coxm5"]

[node name="PowerUp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1
script = SubResource("GDScript_coxm5")

[node name="PowerUpManager" type="Node2D" parent="VBoxContainer"]
script = ExtResource("1_vxdkk")

[node name="Button" type="Button" parent="VBoxContainer/PowerUpManager"]
custom_minimum_size = Vector2(300, 300)
offset_left = 96.0
offset_top = 174.0
offset_right = 396.0
offset_bottom = 474.0
size_flags_vertical = 4
text = "Texte"
script = ExtResource("2_0ocr6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/PowerUpManager/Button"]
sprite_frames = SubResource("SpriteFrames_coxm5")

[node name="Button2" type="Button" parent="VBoxContainer/PowerUpManager"]
custom_minimum_size = Vector2(300, 300)
offset_left = 460.0
offset_top = 187.0
offset_right = 760.0
offset_bottom = 487.0
size_flags_vertical = 4
text = "Texte"

[node name="Button3" type="Button" parent="VBoxContainer/PowerUpManager"]
custom_minimum_size = Vector2(300, 300)
offset_left = 835.0
offset_top = 174.0
offset_right = 1135.0
offset_bottom = 474.0
size_flags_vertical = 4
text = "Texte"
